Scrolltotop visible + correction margin

--- a/style.css
+++ b/style.css
@@ -518,13 +518,13 @@ button {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    opacity: 0;
+    opacity: 1;
     z-index: 500;
     transition: all .3s ease-in-out;
 }
 
 .scrollToTop span {
-    margin-top: 6px;
+    margin-top: 0;
 }
 
 .showScrollTop {
